# rimuru

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  iii-config.yaml  install.sh
.github/workflows/: ci.yml  release.yml
crates/rimuru-cli/: Cargo.toml
crates/rimuru-cli/src/: main.rs  output.rs
crates/rimuru-cli/src/commands/: agents.rs  config.rs  context.rs  costs.rs  ctx.rs  guard.rs  health.rs  hooks.rs  mcp.rs  metrics.rs  mod.rs  models.rs  plugins.rs  sessions.rs  slim.rs
crates/rimuru-core/: Cargo.toml
crates/rimuru-core/benches/: jsonl_parsing.rs  mcp_proxy_overhead.rs  token_counting.rs
crates/rimuru-core/data/: local_models.json
crates/rimuru-core/examples/: mock_mcp_server.rs
crates/rimuru-core/src/: discovery.rs  error.rs  http.rs  lib.rs  main.rs  state.rs  worker.rs
crates/rimuru-core/src/adapters/: amp.rs  claude_code.rs  cline.rs  cline_base.rs  codex.rs  copilot.rs  cursor.rs  detection.rs  gemini_cli.rs  goose.rs  kiro.rs  mod.rs  opencode.rs  roo.rs  windsurf.rs
crates/rimuru-core/src/functions/: agents.rs  budget.rs  config.rs  context.rs  costs.rs  email.rs  export.rs  guard.rs  hardware.rs  health.rs  hooks.rs  indexer.rs  jwt.rs  mcp.rs  mcp_proxy.rs  metrics.rs  mod.rs  models.rs  optimize.rs  plugins.rs  runaway.rs  sessions.rs  skillkit.rs  sync.rs  sysutil.rs  team.rs  webhook.rs
crates/rimuru-core/src/hooks/: mod.rs  types.rs
crates/rimuru-core/src/mcp/: client.rs  compress.rs  mod.rs  proxy.rs  types.rs
crates/rimuru-core/src/models/: agent.rs  context.rs  cost.rs  hardware.rs  metrics.rs  mod.rs  model_info.rs  plugin.rs  session.rs
crates/rimuru-core/src/triggers/: api.rs  mod.rs  schedules.rs
crates/rimuru-core/tests/: adapters.rs  mcp_proxy.rs
crates/rimuru-desktop/: Cargo.toml  tauri.conf.json
crates/rimuru-desktop/icons/: icon.icns
crates/rimuru-desktop/src/: events.rs  lib.rs  main.rs  notifications.rs  state.rs  tray.rs  window_state.rs
crates/rimuru-desktop/src/commands/: agents.rs  costs.rs  export.rs  hooks.rs  metrics.rs  mod.rs  plugins.rs  sessions.rs  settings.rs  skills.rs  sync.rs
crates/rimuru-tui/: Cargo.toml
crates/rimuru-tui/src/: app.rs  client.rs  event.rs  main.rs  state.rs  theme.rs  ui.rs
crates/rimuru-tui/src/views/: agents.rs  costs.rs  dashboard.rs  help.rs  hooks.rs  mcp.rs  metrics.rs  mod.rs  models.rs  plugins.rs  sessions.rs
docs/: api.md  release-notes-v0.4.0.md
plugins/example-rust/: Cargo.toml
plugins/example-rust/src/: main.rs
plugins/example-ts/: package.json
plugins/example-ts/src/: index.ts
scripts/: generate-readme-tags.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts  types.ts
ui/src/city/: characters.ts  engine.ts  pathfinding.ts  renderer.ts  sprites.ts  tilemap.ts
ui/src/components/: AgentCard.tsx  CommandPalette.tsx  CostChart.tsx  DataTable.tsx  ErrorBoundary.tsx  Layout.tsx  MetricsChart.tsx  StatusBadge.tsx  ThemeSwitcher.tsx
ui/src/hooks/: useQuery.ts  useStream.ts
ui/src/pages/: Advisor.tsx  Agents.tsx  Budget.tsx  City.tsx  ConfigSync.tsx  Context.tsx  Costs.tsx  Dashboard.tsx  Hooks.tsx  McpProxy.tsx  McpServers.tsx  Metrics.tsx  Models.tsx  Optimize.tsx  Plugins.tsx  Sessions.tsx  Settings.tsx  Terminal.tsx
ui/src/utils/: format.ts
