[workspace]
resolver = "2"
members = ["crates/rimuru-core", "crates/rimuru-cli", "crates/rimuru-tui", "crates/rimuru-desktop"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
iii-sdk = "0.10.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
schemars = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
