[package]
name = "rimuru-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rimuru"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
comfy-table.workspace = true
anyhow.workspace = true
