[package]
name = "rimuru-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rimuru-worker"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dashmap.workspace = true
dirs.workspace = true
reqwest.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
