[package]
name = "rimuru-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rimuru-worker"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dirs.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
