[package]
name = "rimuru-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rimuru-worker"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dirs.workspace = true
reqwest.workspace = true
csv.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
lettre = { workspace = true, optional = true }

[features]
default = []
email = ["dep:lettre"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true
