[package]
name = "rimuru-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rimuru_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rimuru-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rimuru-core = { path = "../rimuru-core" }
iii-sdk.workspace = true

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
