[package]
name = "rimuru-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rimuru-tui"
path = "src/main.rs"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
