[package]
name = "rimuru-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for Rimuru - AI agent monitor and cost optimizer"

[[bin]]
name = "rimuru-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
