[package]
name = "rimuru-plugin-example"
version = "0.1.0"
edition = "2021"

[dependencies]
iii-sdk = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
